--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,8 @@ AllCops:
     - 'node_modules/**/*'
     - 'vendor/bundle/**/*'
     - 'bin/**/*'
+    - 'config/environments/development.rb'
+    - 'config/initializers/devise.rb'
 
 Metrics/LineLength:
   Max: 120
