--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'bin/**/*'
     - 'config/environments/development.rb'
     - 'config/initializers/devise.rb'
+    - 'config/application.rb'
 
 Metrics/LineLength:
   Max: 120
