--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,19 +1,19 @@
 ---
 development:
-  cloud_name: devsinc123
-  api_key: '479741573669285'
-  api_secret: 6crp43KEMElJA9hU2tudZfssi4c
+  cloud_name: Rails.application.credentials.cloudinary.fetch(:cloud_name)
+  api_key: Rails.application.credentials.cloudinary.fetch(:api_key)
+  api_secret: Rails.application.credentials.cloudinary.fetch(:api_secret)
   enhance_image_tag: true
   static_file_support: false
 production:
-  cloud_name: devsinc123
-  api_key: '479741573669285'
-  api_secret: 6crp43KEMElJA9hU2tudZfssi4c
+  cloud_name:  Rails.application.credentials.cloudinary.fetch(:cloud_name)
+  api_key:  Rails.application.credentials.cloudinary.fetch(:api_key)
+  api_secret:  Rails.application.credentials.cloudinary.fetch(:api_secret)
   enhance_image_tag: true
   static_file_support: true
 test:
-  cloud_name: devsinc123
-  api_key: '479741573669285'
-  api_secret: 6crp43KEMElJA9hU2tudZfssi4c
+  cloud_name:  Rails.application.credentials.cloudinary.fetch(:cloud_name)
+  api_key:  Rails.application.credentials.cloudinary.fetch(:api_key)
+  api_secret:  Rails.application.credentials.cloudinary.fetch(:api_secret)
   enhance_image_tag: true
   static_file_support: false
